[package]
name = "sperve"
version = "0.1.4"
edition = "2021"

[dependencies]
axum = "0.8.0-alpha.1"
tokio = { version = "1.41.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "parking_lot"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["fs", "compression-br", "compression-gzip", "timeout", "cors"] }
